--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Vasilis Gakis",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.18.1",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-html-attributes": "^1.0.5",
@@ -12,14 +13,17 @@
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sass": "^2.1.23",
     "gatsby-plugin-sharp": "^2.3.2",
+    "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-transformer-sharp": "^2.3.5",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-background-slider": "^2.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "styled-components": "^5.2.0"
   },
   "resolutions": {
     "react-helmet/react-side-effect": "2.1.0"
