--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "author": "Vasilis Gakis",
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
+    "bootstrap": "^4.5.2",
     "gatsby": "^2.18.1",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^3.0.22",
     "gatsby-plugin-react-helmet": "^3.1.15",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.1.23",
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-transformer-sharp": "^2.3.5",
     "node-sass": "^4.13.0",
+    "path": "^0.12.7",
     "react": "^16.12.0",
-    "react-background-slider": "^2.0.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-reveal": "^1.2.2",
