--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.18.1",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.2.33",
+    "gatsby-image-background-slider": "^0.0.4",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^3.0.22",
@@ -23,8 +24,10 @@
     "path": "^0.12.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.14",
     "styled-components": "^5.2.0"
