--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Vasilis Gakis",
   "dependencies": {
+    "animejs": "^3.2.1",
     "babel-plugin-styled-components": "^1.11.1",
     "bootstrap": "^4.5.2",
     "gatsby": "^2.18.1",
@@ -20,9 +21,11 @@
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-transformer-sharp": "^2.3.5",
+    "mongodb": "^3.6.2",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "react": "^16.12.0",
+    "react-anime": "^3.0.3",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.0",
     "react-dom": "^16.12.0",
@@ -30,6 +33,7 @@
     "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.14",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.0"
   },
   "resolutions": {
