added main page animations and portfolio transition

--- a/package.json
+++ b/package.json
@@ -4,37 +4,37 @@
   "version": "1.0.0",
   "author": "Vasilis Gakis",
   "dependencies": {
-    "animejs": "^3.2.1",
-    "babel-plugin-styled-components": "^1.11.1",
-    "bootstrap": "^4.5.2",
-    "gatsby": "^2.18.1",
-    "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.2.33",
-    "gatsby-image-background-slider": "^0.0.4",
+    "babel-plugin-styled-components": "^1.12.0",
+    "bootstrap": "^4.5.3",
+    "framer-motion": "^3.2.2-rc.1",
+    "gatsby": "^2.29.3",
+    "gatsby-background-image": "^1.3.1",
+    "gatsby-image": "^2.8.0",
+    "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-html-attributes": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.2.29",
-    "gatsby-plugin-offline": "^3.0.22",
-    "gatsby-plugin-react-helmet": "^3.1.15",
+    "gatsby-plugin-manifest": "^2.9.1",
+    "gatsby-plugin-offline": "^3.7.1",
+    "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^2.1.23",
-    "gatsby-plugin-sharp": "^2.3.2",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-source-filesystem": "^2.1.38",
-    "gatsby-transformer-sharp": "^2.3.5",
-    "mongodb": "^3.6.2",
+    "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-plugin-styled-components": "^3.7.0",
+    "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-transformer-json": "^2.8.0",
+    "gatsby-transformer-sharp": "^2.9.0",
+    "mongodb": "^3.6.3",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
-    "react": "^16.12.0",
-    "react-anime": "^3.0.3",
-    "react-bootstrap": "^1.3.0",
-    "react-bootstrap-icons": "^1.0.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-icons": "^1.2.2",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.14",
     "react-transition-group": "^4.4.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "resolutions": {
     "react-helmet/react-side-effect": "2.1.0"
@@ -52,9 +52,5 @@
   },
   "devDependencies": {
     "prettier": "^1.19.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vasrush/gatsby-starter-landed"
   }
 }
