trying to fix gatsby cloud errors

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Matthew's Portfolio Site",
+  "name": "matthew",
   "description": "Gatsby Starter - Landed V2",
   "version": "1.0.0",
   "author": "Matthew Mckenzie",
