--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.5.3",
+    "canvas": "^2.6.1",
     "framer-motion": "^3.2.2-rc.1",
     "gatsby": "^2.29.3",
     "gatsby-background-image": "^1.3.1",
@@ -22,8 +23,8 @@
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-json": "^2.8.0",
     "gatsby-transformer-sharp": "^2.9.0",
-    "mongodb": "^3.6.3",
     "node-sass": "^4.13.0",
+    "paper": "^0.12.11",
     "path": "^0.12.7",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
@@ -45,7 +46,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby -o develop",
+    "develop": "gatsby develop -o",
     "format": "prettier --write '**/*.js'",
     "clean": "gatsby clean",
     "test": "echo \"Error: no test specified\" && exit 1"
