--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.5.3",
     "canvas": "^2.6.1",
+    "dotenv": "^8.2.0",
     "framer-motion": "^3.2.2-rc.1",
     "gatsby": "^2.29.3",
     "gatsby-background-image": "^1.3.1",
@@ -20,6 +21,7 @@
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-styled-components": "^3.7.0",
+    "gatsby-source-contentful": "^5.0.0",
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-json": "^2.8.0",
     "gatsby-transformer-sharp": "^2.9.0",
