--- a/package.json
+++ b/package.json
@@ -8,31 +8,32 @@
     "bootstrap": "^4.5.3",
     "canvas": "^2.6.1",
     "dotenv": "^8.2.0",
-    "framer-motion": "^3.2.2-rc.1",
-    "gatsby": "^2.29.3",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^3.0.0",
     "gatsby-background-image": "^1.3.1",
-    "gatsby-image": "^2.8.0",
     "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-html-attributes": "^1.0.5",
+    "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-offline": "^3.7.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-plugin-styled-components": "^3.7.0",
     "gatsby-source-contentful": "^5.0.0",
     "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-source-github-api": "^1.0.0",
     "gatsby-transformer-json": "^2.8.0",
-    "gatsby-transformer-sharp": "^2.9.0",
+    "gatsby-transformer-sharp": "^3.11.0",
     "node-sass": "^4.13.0",
     "paper": "^0.12.11",
     "path": "^0.12.7",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-icons": "^1.2.2",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.1",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.14",
